--- a/nodejsapp.yaml
+++ b/nodejsapp.yaml
@@ -1,9 +1,8 @@
 ---
-kind: Deployment
 apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: nodejs-app
-  namespace: default
   labels:
     app: nodejs-app
 spec:
@@ -18,20 +17,22 @@ spec:
     spec:
       containers:
       - name: nodejs-app
-        image: "kushakumar/nodejsapp-9.0:latest"
+        image: varaprasadrenati/node-app-1.0
         ports:
           - containerPort: 3000
+        imagePullPolicy: Always
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodejs-app
-  namespace: default
+  name: nodejs-service
+  labels:
+    app: nodejs-app
 spec:
+  type: LoadBalancer
   selector:
     app: nodejs-app
-  type: LoadBalancer
   ports:
-  - name: http
-    targetPort: 3000
-    port: 80
+    - name: http
+      port: 80
+      targetPort: 3000
