--- a/nodejsapp.yaml
+++ b/nodejsapp.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,11 +19,20 @@ spec:
         image: varaprasadrenati/node-app-1.0
         ports:
           - containerPort: 3000
-        command: ["node", "index.js"]
-        env:
-          - name: PORT
-            value: "3000"
         imagePullPolicy: Always
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 3000
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: 3000
+          initialDelaySeconds: 10
+          periodSeconds: 10
+
 ---
 apiVersion: v1
 kind: Service
